Made modular to run surefire